hepgnn_4top_resampling/python/no_duplication.txt

  File "<string>", line 1
    from model.GravNet import *import torch_geometric.nn as PyG
                                    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch_geometric/__init__.py", line 4, in <module>
    import torch_geometric.data
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch_geometric/data/__init__.py", line 1, in <module>
    from .data import Data
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch_geometric/data/data.py", line 9, in <module>
    from torch_sparse import SparseTensor
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch_sparse/__init__.py", line 19, in <module>
    torch.ops.load_library(spec.origin)
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch/_ops.py", line 110, in load_library
    ctypes.CDLL(path)
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/ctypes/__init__.py", line 364, in __init__
    self._handle = _dlopen(self._name, mode)
OSError: libc10_cuda.so: cannot open shared object file: No such file or directory
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/allModel.py", line 1, in <module>
    from model.GNN1layer import *
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN1layer.py", line 1, in <module>
    import torch_geometric.nn as PyG
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_negative.py", line 8, in <module>
    from torch_geometric.data import InMemoryDataset as PyGDataset, Data as PyGData
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_v5.py", line 8, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_v2.py", line 8, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_abs.py", line 8, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_v4.py", line 8, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/dataset/HEPGNNDataset_pt_classify_fourfeature_v6.py", line 8, in <module>
  File "/home01/hpc22a06/miniconda3/envs/py37/lib/python3.7/site-packages/torch_scatter/__init__.py", line 16, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN3layer.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN1layer_re.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN2.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN1layer_re_lhe.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN2_tanh.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN2layer.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN3.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN2layer_re.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN2_no.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN3layer_mul.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN3layer_re.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN2_sig.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/PointConv.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN2layer_mul.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GNN1layer_mul.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN2_nobatch.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/GCN_noedge.py", line 1, in <module>
  File "/home01/hpc22a06/0me/hepgnn_4top_resampling/python/model/PoolingNet.py", line 1, in <module>
